--- a/EditoraSpread.Api/EditoraSpread.Api.csproj
+++ b/EditoraSpread.Api/EditoraSpread.Api.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EditoraSpread.Application\EditoraSpread.Application.csproj" />
+    <ProjectReference Include="..\EditoraSpread.Infrastructure\EditoraSpread.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
