--- a/EditoraSpread.Api/appsettings.json
+++ b/EditoraSpread.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EditoraSpreadDB;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
